# synapseos

./: .clinerules  .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.worker  PROMPTS.md  README.md  SESSIONS.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: python.mdc  stack.mdc
.github/: copilot-instructions.md
cloudflare/: deploy.sh  worker.ts  wrangler.toml
config/: keydb.conf  litellm.yaml  qdrant.yaml
docs/: api-versioning.md  api.md  architecture.md  cognitive.md  devops.md  prd.md  svelte-integration.md
mcp/: synapse_mcp.py
scripts/: demo.sh  healthcheck.sh  init-db.sql  init-minio.sh  setup-local.sh  setup_collection.py  test_endpoint.py  test_ingest.py  test_local_e2e.py  test_memory.py  test_reflection.py  test_retrieval.py  test_sdk.py  test_think.py  test_tools.py
sdk/python/: pyproject.toml
sdk/python/synapseos/: __init__.py  client.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
src/api/: main.py  models.py
src/api/middleware/: langfuse_mw.py  tenant.py
src/api/routes/: admin.py  collections.py  feedback.py  (+8 more)
src/cognitive/: engine.py  generation_tools.py  memory.py  planner.py  reflection.py  tools.py
src/core/: clients.py  config.py  db.py  generation.py  ingestion.py  retrieval.py
src/worker/: ingestion_worker.py  nightly_optimizer.py
tests/: conftest.py  test_extended.py
tests/local_harness/: conftest.py  patches.py  test_local_core.py
(+3 files in other folders)
