[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapseos"
version = "1.0.0"
description = "SynapseOS Python SDK — BYOK RAG with cognitive engine"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0", "pydantic>=2.9.0"]

[project.urls]
Homepage = "https://github.com/rahlplx/synapseos"
